@@ -320,7 +320,7 @@ os2--distrib : force
 	cp -p $(DOSDIR)/*.lisp $(TEMPDIR)
 #	cp -p $(DOSDIR)/*.fas $(TEMPDIR)
 	mkdir $(TEMPDIR)/locale
-	for lang in en de fr es; do mkdir $(TEMPDIR)/locale/$$lang; mkdir $(TEMPDIR)/locale/$$lang/LC_MESSAGES; cp -p $(DOSDIR)/locale/$$lang/LC_MESSAGES/clisp.mo $(TEMPDIR)/locale/$$lang/LC_MESSAGES/clisp.mo; done
+	for lang in en de fr es nl ru; do mkdir $(TEMPDIR)/locale/$$lang; mkdir $(TEMPDIR)/locale/$$lang/LC_MESSAGES; cp -p $(DOSDIR)/locale/$$lang/LC_MESSAGES/clisp.mo $(TEMPDIR)/locale/$$lang/LC_MESSAGES/clisp.mo; done
 	cp -p $(DOSDIR)/README $(DOSDIR)/README.de $(DOSDIR)/README.en $(DOSDIR)/README.es $(DOSDIR)/clisp.1 $(DOSDIR)/clisp.html $(DOSDIR)/impnotes.html $(DOSDIR)/clisp.gif $(DOSDIR)/clreadline.3 $(DOSDIR)/clreadline.html $(TEMPDIR)
 	from-ibmpc $(TEMPDIR)/clisp.1 os2/clisp.1
 	from-ibmpc $(TEMPDIR)/clisp.html os2/clisp.html
