@@ -652,7 +652,7 @@ for the FFI
 specifies the language
 .B clisp
 uses to communicate with the user. The value may be
-.BR english ", " german ", " french ", " dutch ", " spanish
+.BR english ", " german ", " french ", " spanish ", " dutch ", " russian
 and defaults to
 .BR english .
 The
