@@ -210,7 +210,7 @@ This may be
 #endif
 #ifdef GNU_GETTEXT
 <code>english</code>, <code>german</code>, <code>french</code>,
-<code>spanish</code>, <code>dutch</code>.
+<code>spanish</code>, <code>dutch</code>, <code>russian</code>.
 Other languages may be specified through the environment variable
 <code>LANG</code>,
 provided the corresponding message catalog is installed.
