@@ -1797,6 +1797,7 @@ LISPSYM(german,"DEUTSCH",i18n) # a language for MISC
 LISPSYM(french," FRAN\303\207AIS",i18n) # a language for MISC [' ' => utf8]
 LISPSYM(spanish," ESPA\303\221OL",i18n) # a language for MISC [' ' => utf8]
 LISPSYM(dutch,"NEDERLANDS",i18n) # a language for MISC
+LISPSYM(russian," \320\240\320\243\320\241\320\241\320\232\320\230\320\231",i18n) # a language for MISC [' ' => utf8]
 #endif
 LISPSYM(init_hooks,"*INIT-HOOKS*",system) # als Variable für SPVW
 LISPSYM(quiet,"*QUIET*",system) # als Variable für SPVW
